Fix the scrollbar of the year calendar

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -112,12 +112,11 @@ body {
 /* Year Calendar Component */
 
 .year-calendar-container {
-  margin: 30px 0px 30px 0px;
+  /* margin: 30px 0px 30px 0px; */
   display: flex;
-  gap: 0px;
+  gap: 10px;
   justify-content: center;
-  /* overflow: scroll; */
-  width: 300px;
+  width: 320px;
   /* padding: 15px; */
 }
 
@@ -131,7 +130,7 @@ body {
   gap: 3px;
   border-radius: 15px;
   box-sizing: border-box;
-  overflow: scroll;
+  /* overflow-x: scroll; */
 }
 
 
@@ -152,8 +151,9 @@ body {
   grid-template-rows: repeat(7, 1fr);
   grid-auto-flow: column;
   gap: 3px;
-  width: 200px;
-  overflow: scroll;
+  width: 260px;
+  overflow-x: scroll;
+  scrollbar-width: none;
   padding: 20px;
   box-sizing: border-box;
 }
@@ -212,7 +212,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25px;
+  height: 22px;
   width: auto;
 }
 
@@ -395,7 +395,7 @@ input[type="radio"] {
 }
 
 .confirmation-box {
-  margin: 10% auto;
+  margin: 20% auto;
   padding: 30px;
   width: 300px;
   background-color: var(--bg-color);
@@ -426,6 +426,7 @@ input[type="radio"] {
   justify-content: center;
   align-items: center;
   height: 100%;
+  gap: 30px;
 }
 
 .calendar-card {
